[build-system]
requires = ["uv-build >=0.10.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "gandharva"
version = "0.0.1"
description = "All-purpose data science application builder"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]
dependencies = [
    "fastapi >=0.119.1,<2.0.0",
    "hypothesis-jsonschema >=0.23.1,<2.0.0",
    "lumen >=0.6.1,<2.0.0",
    "packaging >=26.0.0",
    "pandera[xarray] >=0.31.0,<2.0.0",
    "panel >=1.9.1,<2.0.0",
    "panel-material-ui >=0.12.0,<2.0.0",
    "platformdirs >=4.6.0,<5.0.0",
    "pydantic >=2.12.1,<4.0.0",
    "pydantic-settings >=2.13.0,<4.0.0",
    "rich >=14.2.0",
    "rich-argparse >=1.7.2,<2.0.0",
    "typing-extensions >=4.15.0,<5.0.0",
    "universal-pathlib >=0.3.10,<2.0.0",
]

[project.optional-dependencies]
typing = [
    "pandas-stubs >=1.4.2,<4.0.0",
]

[dependency-groups]
dev = [
    "attrs >=25.4.0",
    "basedpyright >=1.39.7",
    "httpx >=0.28.1",
    "httpx2 >=2.2.0",
    "nodejs-wheel-binaries <=20.18.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "pytest >=9.0.3",
    "ruff >=0.15.17",
]

[[project.authors]]
name = "hingebase"
email = "zcliu@pku.edu.cn"

[project.urls]
Homepage = "https://github.com/hingebase/gandharva"
"Source Code" = "https://github.com/hingebase/gandharva"
"Issue Tracker" = "https://github.com/hingebase/gandharva/issues"

[tool.basedpyright]
reportUnnecessaryTypeIgnoreComment = "warning"
strict = ["."]
typeCheckingMode = "off"

[tool.ruff]
extend-exclude = [".pixi"]
line-length = 79
preview = true

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.tombi.files]
exclude = [".venv/**/*.toml"]

[tool.tombi.lint.rules]
tables-out-of-order = "off"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
